--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,7 +1,7 @@
-jdbc.driver = com.mysql.jdbc.Driver
-jdbc.user = lorius
-jdbc.password = 123456
-jdbc.url = jdbc:mysql://localhost:3306/blue
+#jdbc.driver = com.mysql.jdbc.Driver
+#jdbc.user = lorius
+#jdbc.password = 123456
+#jdbc.url = jdbc:mysql://localhost:3306/blue
 hibernate.archive.autodetection = class,hbm
 hibernate.dialect =  org.hibernate.dialect.MySQL57Dialect
 hibernate.show_sql = true
@@ -12,11 +12,17 @@ hibernate.c3p0.acquire_increment = 2
 hibernate.c3p0.max_statements = 150
 hibernate.globally_quoted_identifiers = true
 
+jdbc.driver = com.mysql.jdbc.Driver
+jdbc.user = flawell1_blue
+jdbc.password = _%(X~Z1b1B+F
+jdbc.url = jdbc:mysql://localhost:3306/flawell1_blue
+
 #Database Configuration
-db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/blue
-db.username=lorius
-db.password=123456
+#db.driver=com.mysql.jdbc.Driver
+#db.url=jdbc:mysql://localhost:3306/blue
+#db.username=lorius
+#db.password=123456
+
 
 #Hibernate Configuration
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
