--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #Database Configuration
-db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/blue
-db.username=lorius
-db.password=123456
+#db.driver=com.mysql.jdbc.Driver
+#db.url=jdbc:mysql://localhost:3306/blue
+#db.username=lorius
+#db.password=123456
 
 #Hibernate Configuration
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
